# jwst-mtl

./: .gitignore  LICENSE  README.md  awesimsoss_demo.ipynb  create_psf.py  lien  loic.md  mk_scene.py  titi
AMI/: README.md  test,py  tools_installation_ami.md
AMI/AMI_SIM_MTL/: README.md  requirements.txt  setup.cfg  setup.py
AMI/AMI_SIM_MTL/ami_mtl/core/: README.md
AMI/AMI_SIM_MTL/ami_mtl/core/base/: base.py
AMI/AMI_SIM_MTL/ami_mtl/core/core/: constant_functions.py  exceptions.py  general.py  log_functions.py  param_functions.py
AMI/AMI_SIM_MTL/ami_mtl/core/instrument/: constants.py
AMI/AMI_SIM_MTL/ami_mtl/data/: README.md
AMI/AMI_SIM_MTL/ami_mtl/io/: drs_file.py
AMI/AMI_SIM_MTL/ami_mtl/science/: README.md  __init__.py  etienne.py  wrap.py  wrapper.py
AMI/AMI_SIM_MTL/ami_sim_mtl/core/core/: constant_functions.py  exceptions.py  general.py  param_functions.py
AMI/AMI_SIM_MTL/ami_sim_mtl/core/instrument/: constants.py
AMI/AMI_SIM_MTL/ami_sim_mtl/science/: README.md
AMI/AMI_SIM_MTL/inputs/: example.yaml  jwst_ami_p23_example.xml
AMI/AMI_SIM_MTL/misc/: __init__.py  ami_mtl_wrapper.py  notes_on_adding_mirage.md  paramtest.py  run_amical.py
AMI/AMI_SIM_MTL/notebooks/: example_wrap.ipynb  param_example.ipynb  update_example.ipynb
AMI/AMI_SIM_MTL/notebooks/outputs/: README.md  user_config.ini
AMI/AMI_SIM_MTL/outputs/: README.md  user_config_njc.ini
NRM_pipeline_Xara/: NIRISS_extractFakeData.py
SOSS/: Box-like_extraction.ipynb  Final_extraction.ipynb  JWST_Pipeline.md  README.md  Spatial_profile_iteration.ipynb  Tasks.md  demo_awesimsoss.ipynb  (+5 more)
(+551 files in other folders)
