[metadata]
name = ami_mtl
description = UdeM AMI Simulation wrapper
long_description = file: README.md
author = Neil Cook
author_email = neil.james.cook@gmail.com
url = https://github.com/njcuk9999/jwst-mtl/tree/master/AMI/AMI_SIM_MTL
license = MIT License

[options]
zip_safe = False
packages = find:
install_requires =
    mirage==2.2.1

[options.extras_require]
dev =
    ipython

[options.entry_points]
console_scripts =
    wrapper = ami_mtl.science.wraper:main
